# cert_me_boi

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_MANIFESTO.md  GUI_IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  RESOURCE_MANAGEMENT_IMPROVEMENTS.md  SETUP_COMPLETE.md  certification_recommendations_20250801_013444.md  cli.py  configure_deepseek_r1.py  create_social_image.py  demo.py  docker-compose.yml  environment.example  gui.py  pyproject.toml  pytest.ini  repository_topics.md  requirements-dev.txt  requirements-enhanced.txt  requirements.txt  run_enhanced_gui.py  run_gui.py  run_ultra_enhanced.py  setup.py  setup_ai.py  streamlit_app.py  userinput.py
.cursor/: mcp.json
.cursor/rules/: 10x-tool-call.mdc  add-to-changelog.mdc  code-analysis.mdc  codequality.mdc  mcp.mdc  mermaid.mdc  pineapple.mdc  senior.mdc  task-list.mdc
.extension/: sitecustomize.py  vscode_error_buffer.js  vscode_error_buffer.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.specstory/history/: 2025-05-30_17-54-plan-for-a-complex-certification-app.md  2025-05-30_17-54Z-plan-for-a-complex-certification-app.md  2025-06-01_14-01-post-project-to-github.md  2025-06-01_14-01Z-post-project-to-github.md
config/: .encryption_key  certifications.yaml  courses.example.yaml  courses.yaml  environment.example  error_handling.yaml  monitor.yaml  openrouter.env.template
data/templates/: README.md
docker/: Dockerfile.discovery  Dockerfile.vr
docs/: ADVANCED_FEATURES_ROADMAP.md  ARCHITECTURE.md  GITHUB_SETUP.md  OPENROUTER_SETUP.md
src/: enhanced_automation.py  gui_integration.py  main.py  platform_discovery.py  test_setup.py
src/ai/: model_handler.py
src/automation/: browser.py  course_automation.py  enhanced_course_automation.py
src/discovery/: content_discovery_service.py
src/gui/: enhanced_streamlit_app.py  knowledge_base_viewer.py  ultra_enhanced_gui.py
src/learning/: content_recorder.py
src/monitor/: screen_monitor.py  video_monitor.py
src/utils/: base_logger.py  error_handler.py  log_aggregator.py  log_analyzer.py  log_rotation.py  logger.py  logger_instance.py  metrics_collector.py  persistence.py  recovery_manager.py
src/vr/: package.json  server.js
test_results/: coverage_20260516_095016.json  coverage_20260516_095016.xml
tests/: conftest.py  run_tests.py  test_course_automation.py  test_discovery_cli.py  test_error_handler.py  test_error_handling.py  test_human_simulation.py  test_log_rotation.py  test_logging.py  test_main.py  test_queuing.py  test_video_monitor.py
(+4 files in other folders)
